<resources>
    <string name="app_name">picture_of_the_day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helper_text">введите запрос</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="wiki">wiki</string>
    <string name="search">search</string>
    <string name="Default">Default</string>
    <string name="Entry">Entry</string>
    <string name="choice">Choice</string>
    <string name="action">Action</string>
    <string name="filter">Filter</string>
    <string name="background_color">Background Color</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="chip_icon">Chip icon</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="chip">Chip</string>
    <string name="group">Group</string>
    <string name="in">in</string>
    <string name="single">single</string>
    <string name="line">line</string>
    <string name="add">add</string>
    <string name="a">a</string>
    <string name="horizontal">horizontal</string>
    <string name="scroll">scroll</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="cosmos">Космос</string>
    <string name="moon">Луна</string>
    <string name="mars">Марс</string>
    <string name="earth">Земля</string>
    <string name="home">home</string>
    <string name="photos">photos</string>
    <string name="weather">weather</string>
    <string name="earth_description">Земля — не самая большая из планет Солнечной системы. Наоборот, она одна из самых маленьких</string>
    <string name="show_descr">Показать описание</string>
    <string name="earth_planet">Планета Земля</string>
    <string name="mars_description">планета земной группы с разреженной атмосферой</string>
    <string name="mars_planet">Планета Марс</string>
    <string name="moon_planet">Спутник Луна</string>
    <string name="moon_description">пятый по размеру спутник Солнечной системы</string>
</resources>