<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/transparent_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:clickable="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="?actionBarSize">
        <FrameLayout
            android:id="@+id/activity_api_bottom_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/option_one_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/marginTop"
                android:text="@string/mars"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/option_two_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/marginTop"
                android:text="@string/earth"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>
                    <LinearLayout
            android:id="@+id/option_three_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/marginTop"
                android:text="@string/moon"
                android:textColor="@color/old_new"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/option_four_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/marginTop"
            android:text="@string/cosmos"
            android:textColor="@color/black"
            android:textStyle="bold" />
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_margin="@dimen/marginChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_theme_fab"
            app:tint="@color/white"
            android:elevation="@dimen/fab_elevation" />
        <ImageView
            android:id="@+id/plus_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_large"
            android:elevation="@dimen/image_elevation"
            app:srcCompat="@drawable/ic_plus_fab" />
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemHorizontalTranslationEnabled="true"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
